--- a/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 
+{% if not request.user.is_staff %}
 
 
 
@@ -152,6 +153,8 @@
         </div>
       </div>
 </div> 
+
+{% endif %}
 
 
 {% endblock %}
