--- a/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
@@ -21,6 +21,8 @@
   <link href="{% static 'css/contacto.css' %}" rel="stylesheet">
   <link href="{% static 'css/galeria-cliente.css' %}" rel="stylesheet">
   <link href="{% static 'css/carrusel.css' %}" rel="stylesheet">
+  <link href="{% static 'css/administrador.css' %}" rel="stylesheet">
+
   <link rel="stylesheet" href="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.css" integrity="sha512-QAY8RpaU+5mx/feUcMx9GlZda/DWr2b7MFnFAPuLKSsVOnBOSGMHZDv4e1HbeLrjGFlhaFYIC29vKGCpOjQryw==" crossorigin="anonymous" />
 
@@ -105,9 +107,16 @@
             <div class="item">
               <div class="row">
                 <div class="col-md-6 col-md-push-6 item-caption">
+                  {% if request.user.is_staff %}
                   <h2 class="h1 text-weight-light">
-                      Bienvenido {{ user }} <span class="text-primary"></span> 
+                      Bienvenido Administrador <span class="text-primary">{{ user }}</span> 
                   </h2>
+                  {% endif %}
+                  {% if not request.user.is_staff %}
+                  <h2 class="h1 text-weight-light">
+                    Bienvenido {{ user }} <span class="text-primary"></span> 
+                  </h2>
+                  {% endif %}
                 </div>
               </div>
             </div>
@@ -128,6 +137,57 @@
       </div>
     </div>
   </div>
+
+{% if request.user.is_staff %}
+<div class="Containers">
+  <nav class="nav-main">
+      <ul class="botones">
+          <li> 
+              <a  href=""> <strong> Menu Principal </strong> </a>
+          </li>
+          <li> 
+              <a  href=""> <strong> Mi Perfil </strong> </a>
+          </li>
+      </ul>
+  </nav>
+</div>
+<div class="inicio-adm">
+  <div class="inicio-adm-titulo">
+      <h1>Elegir tarea a realizar</h1>
+  </div>
+  <div class="inicio-adm-opciones">
+      <div class="inicio-adm-opciones-botones1">
+         <a href="">Mantener Clientes</a> 
+      </div>
+      <div class="inicio-adm-opciones-botones2">
+         <a href="">Mantener Departamento</a> 
+      </div>
+      <div class="inicio-adm-opciones-botones3">
+          <a href="">Pagos</a> 
+       </div>
+       <div class="inicio-adm-opciones-botones4">
+          <a href="">Mantener Servicios Basicos</a> 
+       </div>
+       <div class="inicio-adm-opciones-botones5">
+          <a href="">Generar Estadistica</a> 
+       </div>
+       <div class="inicio-adm-opciones-botones6">
+          <a href="">Generar Informe</a> 
+       </div>
+       <div class="inicio-adm-opciones-botones7">
+           <a href="#">Autentificar Cliente</a> 
+        </div>
+        <div class="inicio-adm-opciones-botones8">
+           <a href="#">Ver mi Perfil</a> 
+        </div>
+  </div>
+</div>
+
+{% endif %}
+
+
+{% if not request.user.is_staff %}
+
 {% block sidebar %}
 <div class="Containers">
     <nav class="nav-main">
@@ -150,7 +210,12 @@
         </ul>
     </nav>
 </div>
+
+
 {% endblock %}
+
+
+{% endif %}
 
   {% block content %}
     
