--- a/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
@@ -143,7 +143,7 @@
   <nav class="nav-main">
       <ul class="botones">
           <li> 
-              <a  href=""> <strong> Menu Principal </strong> </a>
+              <a  href="/inicio"> <strong> Menu Principal </strong> </a>
           </li>
           <li> 
               <a  href=""> <strong> Mi Perfil </strong> </a>
@@ -151,38 +151,6 @@
       </ul>
   </nav>
 </div>
-<div class="inicio-adm">
-  <div class="inicio-adm-titulo">
-      <h1>Elegir tarea a realizar</h1>
-  </div>
-  <div class="inicio-adm-opciones">
-      <div class="inicio-adm-opciones-botones1">
-         <a href="">Mantener Clientes</a> 
-      </div>
-      <div class="inicio-adm-opciones-botones2">
-         <a href="">Mantener Departamento</a> 
-      </div>
-      <div class="inicio-adm-opciones-botones3">
-          <a href="">Pagos</a> 
-       </div>
-       <div class="inicio-adm-opciones-botones4">
-          <a href="">Mantener Servicios Basicos</a> 
-       </div>
-       <div class="inicio-adm-opciones-botones5">
-          <a href="">Generar Estadistica</a> 
-       </div>
-       <div class="inicio-adm-opciones-botones6">
-          <a href="">Generar Informe</a> 
-       </div>
-       <div class="inicio-adm-opciones-botones7">
-           <a href="#">Autentificar Cliente</a> 
-        </div>
-        <div class="inicio-adm-opciones-botones8">
-           <a href="#">Ver mi Perfil</a> 
-        </div>
-  </div>
-</div>
-
 {% endif %}
 
 
