--- a/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
@@ -4,6 +4,42 @@
 
 {% block content %}
 
+{% if request.user.is_staff %}
+
+<div class="inicio-adm">
+  <div class="inicio-adm-titulo">
+      <h1>Elegir tarea a realizar</h1>
+  </div>
+  <div class="inicio-adm-opciones">
+      <div class="inicio-adm-opciones-botones1">
+         <a href="/mantener_cliente">Mantener Clientes</a> 
+      </div>
+      <div class="inicio-adm-opciones-botones2">
+         <a href="/mantener_departamento">Mantener Departamento</a> 
+      </div>
+      <div class="inicio-adm-opciones-botones3">
+          <a href="/pagos_adm">Pagos</a> 
+       </div>
+       <div class="inicio-adm-opciones-botones4">
+          <a href="/mantener_servicios">Mantener Servicios Basicos</a> 
+       </div>
+       <div class="inicio-adm-opciones-botones5">
+          <a href="/generar_estadistica">Generar Estadistica</a> 
+       </div>
+       <div class="inicio-adm-opciones-botones6">
+          <a href="/generar_informe">Generar Informe</a> 
+       </div>
+       <div class="inicio-adm-opciones-botones7">
+           <a href="#">Autentificar Cliente</a> 
+        </div>
+        <div class="inicio-adm-opciones-botones8">
+           <a href="#">Ver mi Perfil</a> 
+        </div>
+  </div>
+</div>
+
+{% endif %}
+
 
 {% if not request.user.is_staff %}
 
