--- a/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
@@ -109,12 +109,12 @@
                 <div class="col-md-6 col-md-push-6 item-caption">
                   {% if request.user.is_staff %}
                   <h2 class="h1 text-weight-light">
-                      Bienvenido Administrador <span class="text-primary">{{ user }}</span> 
+                    Administrador <span class="text-primary">{{ user }}</span> 
                   </h2>
                   {% endif %}
                   {% if not request.user.is_staff %}
                   <h2 class="h1 text-weight-light">
-                    Bienvenido {{ user }} <span class="text-primary"></span> 
+                    Bienvenido  <span class="text-primary">{{ user }}</span> 
                   </h2>
                   {% endif %}
                 </div>
