--- a/Portafolio 2.0/portafolio/aplicacion/templates/Cliente.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/Cliente.html
@@ -33,7 +33,7 @@
         <td>{{ reservita.id}}</td>
         <td>{{ reservita.Fecha_Reserva_Inicio}}</td>
         <td>{{ reservita.Fecha_Reserva_Termino}}</td>
-        <td>{{ reservita.cliente}}</td>
+        <td>{{ reservita.user}}</td>
         <td>{{ reservita.departamento}}</td>
         <td>{{ reservita.servicioextra}}</td>
         <td><a href="/cancelarreserva/{{ reservita.id }}">
