--- a/Portafolio 2.0/portafolio/aplicacion/templates/listareserva.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/listareserva.html
@@ -31,7 +31,7 @@
       <td>{{ reservitapdf.id}}</td>
       <td>{{ reservitapdf.Fecha_Reserva_Inicio}}</td>
       <td>{{ reservitapdf.Fecha_Reserva_Termino}}</td>
-      <td>{{ reservitapdf.cliente}}</td>
+      <td>{{ reservitapdf.user.cli_Nombre}} {{ reservitapdf.user.cli_Apellidos}}</td>
       <td>{{ reservitapdf.departamento}}</td>
       <td>{{ reservitapdf.servicioextra}}</td>
     </tr>
