--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_departamento.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_departamento.html
@@ -53,35 +53,90 @@
         <div class="titulo-contacto">
             <h2>Agregar Departamento</h2>
         </div>
-        <div class="escritura-contacto">
-            <h4>Ante problemas tecnico {{ request.user }}, envies un correo o llamar. </h4>
-            <hr>
-            <p>Jonathan cabrera</p>
-            <i class="fa fa-phone fa-fw text-primary"></i> +569 4353 1445
-            <br>
-            <br>
-            <p>Ezequiel Riquelme</p>
-            <i class="fa fa-phone fa-fw text-primary"></i> +569 5776 2043
-            <br>
-        </div>
         <div class="formulario-contacto">
-
             <h4>Formulario Departamento </h4>
             <hr>
-            <form class="form-contac" method="POST" action="" >
-                <p>Nombre departamento</p>
-                <input type="text" id="celular" class="form-input" name="asunto" required>
+            <form class="form-contac" method="POST" action="" enctype="multipart/form-data">
+                <p>Nombre Departamento</p>
+                <input type="text" id="celular" class="form-input" name="Nombre_Departamento" required>
                 
-                <p>Ubicacion del departamento</p>
-                <input type="email" id="celular" class="form-input" name="correoaenviar" required>
+                <p>Numero de Propiedad</p>
+                <input type="number" id="celular" class="form-input" name="Numero_propiedad" required>
+
+                <p>Descripcion Departamento</p>
+                <textarea id="w3review" name="Descripcion_departamento" rows="2" cols="22,5" >
+                </textarea>
+
+                <p>Direccion del departamento</p>
+                <input type="text" id="celular" class="form-input" name="Direccion_departamento" required>
+
+                <p>Numero de Habitaciones</p>
+                <input type="number" id="celular" class="form-input" name="habitaciones" required>
+
+                <p>Numero de Baños</p>
+                <input type="number" id="celular" class="form-input" name="Baños" required>
+                
+                <p>Calefacción</p>
+                <select name="Calefaccion">
+                  <option>Si</option>
+                  <option>No</option>
+                </select>
+
+                <p>Internet</p>
+                <select name="Internet">
+                  <option>Si</option>
+                  <option>No</option>
+                </select>
+
+                <p>Amoblado</p>
+                <select name="Amoblado">
+                  <option>Si</option>
+                  <option>No</option>
+                </select>
+
+                <p>Televisión</p>
+                <select name="Televicion">
+                  <option>Si</option>
+                  <option>No</option>
+                </select>
+
+                <p>Disponibilidad</p>
+                <select name="Disponible">
+                  <option>Si</option>
+                  <option>No</option>
+                </select>
+
+                <p>Imagenes del Recinto</p>
+                <input type="file" id="celular" class="form-input" name="Imagen_Recinto" required>
+
+                <p>Imagenes del Entorno</p>
+                <input type="file" id="celular" class="form-input" name="Imagen_Entorno" required>
 
                 <p>Valor departamento diariamente</p>
-                <textarea id="w3review" name="descripcioncontacto" rows="2" cols="22,5" >
-                </textarea>
+                <input type="number" id="celular" class="form-input" name="Valor_Diario" required>
+
+                {{ form.comuna }}
+
+                {{ form.inventario }}
+
+                {{ form.gasto }}
+
                 {% csrf_token %}
                 <input type="submit" class="submit" value="Añadir Departamento">
             </form> 
+            
         </div>
+        <div class="escritura-contacto">
+          <h4>Ante problemas tecnico {{ request.user }}, envies un correo o llamar. </h4>
+          <hr>
+          <p>Jonathan cabrera</p>
+          <i class="fa fa-phone fa-fw text-primary"></i> +569 4353 1445
+          <br>
+          <br>
+          <p>Ezequiel Riquelme</p>
+          <i class="fa fa-phone fa-fw text-primary"></i> +569 5776 2043
+          <br>
+      </div>
     </div>
 </div>
 
@@ -137,7 +192,12 @@
     </div>
   </div>
 {% else %}
-    <h1>No existe registro de Clientes<h1>
+<div id="resultadolisto">
+  <br> <br> <br> 
+  <h2>No hay registros de departamento, favor añadir</h2>
+  <br> <br> 
+  </div>
 {% endif %}
 
 {% endblock %}
+
