--- a/Portafolio 2.0/portafolio/aplicacion/templates/mantener_cliente.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/mantener_cliente.html
@@ -41,7 +41,7 @@
                 <td>{{ usuario.email}}</td>
                 <td>{{ usuario.username}}</td>
                 <td>{{ usuario.is_active}}</td>
-                <td><a href="/editarusuario/ {{ usuario.id }}">
+                <td><a href="/actualizaruser/{{ usuario.id }}">
                     Validar
                 </a></td>
                 <td><a href="/deleteuser/{{ usuario.id }}">
