--- a/Portafolio 2.0/portafolio/aplicacion/templates/listareserva.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/listareserva.html
@@ -4,6 +4,8 @@
 <h1 align="center">Turismo Real te da la bienvenida y te damos aqui el PDF de tu reserva</h1>
 <hr>
 <br>
+<h1 align="center"> TURISMO REAL</h1>
+
 <br>
 <h2>Nosotros somos una compañia sumamente responsable con los tiempos y el orden, por lo que, te sugerimos 
     traer este informe de manera impresa para agilizar el movimiento.</h2>
@@ -13,49 +15,63 @@
      somos un servicio catalogado a nivel mundial como uno de 7 extrellas, calidad y diversion entregamos.
 </h3>
 
+{% if reservitapdf %}
 
-  <table class="table table-bordered order-table " border="1">
+<br>
+<br>
+<h1>Señor {{ reservitapdf.user.cli_Nombre}} {{ reservitapdf.user.cli_Apellidos}}.</h1>
+
+<h1 align="center">El codigo de su reserva es: "{{ reservitapdf.id}}" </h1>
+
+<p align="center">El inicio de su reserva es "{{ reservitapdf.Fecha_Reserva_Inicio}}" con el termino del 
+  "{{ reservitapdf.Fecha_Reserva_Termino}}"
+</p>
+<br>
+<br>
+
+<h2>¿Que posee el departamento? </h2>
+<p> -Calefaccion: "{{ reservitapdf.departamento.Calefaccion }}" </p>
+<p> -Internet: "{{ reservitapdf.departamento.Internet }}" </p>
+<p> -Amoblado: "{{ reservitapdf.departamento.Amoblado }}" </p>
+<p> -Television: "{{ reservitapdf.departamento.Televicion }}" </p>
+
+  <table class="table table-bordered order-table " border="1"> 
     <thead>
       <tr>
-        <th>Codigo</th>
-        <th>Fecha Inicio</th>
-        <th>Fecha Termino</th>
-        <th>Cliente</th>
         <th>Departamento</th>
         <th>Servicio</th>
       </tr>
     </thead>
   </div>
-  {% for reservitapdf in reservitapdf %}
     <tr>
-      <td>{{ reservitapdf.id}}</td>
-      <td>{{ reservitapdf.Fecha_Reserva_Inicio}}</td>
-      <td>{{ reservitapdf.Fecha_Reserva_Termino}}</td>
-      <td>{{ reservitapdf.user.cli_Nombre}} {{ reservitapdf.user.cli_Apellidos}}</td>
       <td>{{ reservitapdf.departamento}}</td>
       <td>{{ reservitapdf.servicioextra}}</td>
     </tr>
-  {% endfor %}
   </table>
-<hr>
+<br>
+<br>
+<h1 align="center"> El valor a pagar: ${{ reservitapdf.departamento.Valor_Diario}} del 
+  departamento "{{ reservitapdf.departamento.Nombre_Departamento }}" ubicado en la direccion 
+  "{{ reservitapdf.departamento.Direccion_departamento }}" en la comuna "{{ reservitapdf.departamento.comuna }}".
+</h1>
+{% endif %}
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 
 <h3>favor de imprimir esta reserva.
 </h3>
+
+
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 <br>
 <hr>
 <p align="center">Derechos Reservados de Turismo real</p>
