--- a/Portafolio 2.0/portafolio/aplicacion/templates/listareserva.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/listareserva.html
@@ -5,6 +5,7 @@
 <hr>
 <br>
 <h1 align="center"> TURISMO REAL</h1>
+<img src="{{ reservitapdf.departamento.Imagen_Recinto.url }}">
 
 <br>
 <h2>Nosotros somos una compañia sumamente responsable con los tiempos y el orden, por lo que, te sugerimos 
@@ -54,6 +55,8 @@
   departamento "{{ reservitapdf.departamento.Nombre_Departamento }}" ubicado en la direccion 
   "{{ reservitapdf.departamento.Direccion_departamento }}" en la comuna "{{ reservitapdf.departamento.comuna }}".
 </h1>
+
+
 {% endif %}
 <br>
 <br>
