avance vista view funcionario

--- a/Portafolio 2.0/portafolio/aplicacion/templates/perfil.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/perfil.html
@@ -31,7 +31,7 @@
     </li>
     <li>
         <h3>Email</h3>
-        <p><a href="#">{{ user.cli_Email}}</a></p>
+        <p><a href="#">{{ user.email}}</a></p>
     </li>
     <li>
         <h3>Rut</h3>
