--- a/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
@@ -112,9 +112,14 @@
                     Administrador <span class="text-primary">{{ user }}</span> 
                   </h2>
                   {% endif %}
-                  {% if not request.user.is_staff %}
+                  {% if not request.user.is_staff and not request.user.funcionario %}
                   <h2 class="h1 text-weight-light">
                     Bienvenido  <span class="text-primary">{{ user }}</span> 
+                  </h2>
+                  {% endif %}
+                  {% if request.user.funcionario %}
+                  <h2 class="h1 text-weight-light">
+                    Bienvenido Funcionario  <span class="text-primary">{{ user }}</span> 
                   </h2>
                   {% endif %}
                 </div>
@@ -153,8 +158,7 @@
 </div>
 {% endif %}
 
-
-{% if not request.user.is_staff %}
+{% if not request.user.is_staff and not request.user.funcionario %}
 
 {% block sidebar %}
 <div class="Containers">
@@ -178,12 +182,27 @@
         </ul>
     </nav>
 </div>
-
-
 {% endblock %}
-
-
 {% endif %}
+
+{% if request.user.funcionario %}
+
+<div class="Containers">
+  <nav class="nav-main">
+      <ul class="botones">
+          <li> 
+              <a  href="/inicio"> <strong> Menu Principal </strong> </a>
+          </li>
+          <li> 
+              <a  href="/perfil_funcionario"> <strong> perfil </strong> </a>
+          </li>
+      </ul>
+  </nav>
+</div>
+{% endif %}
+
+
+
 
   {% block content %}
     
