--- a/Portafolio 2.0/portafolio/aplicacion/templates/perfil_funcionario.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/perfil_funcionario.html
@@ -1,4 +1,4 @@
-{% extends "funcionario_generic.html" %}
+{% extends "cliente_generic.html" %}
 {% load static %}
 
 {% block content %}
@@ -10,28 +10,32 @@
      <br>
     <li >
         <h3>Correo</h3>
-        <p><a href="Correo: f.ordenesg@alumnos.duoc.cl">f.ordenesg@alumnos.duoc.cl</a></p>
+        <p><a href="#">{{ user.email}}</a></p>
+    </li>
+    <li >
+        <h3>Nombre</h3>
+        <p><a href="#">{{ user.cli_Nombre}}</a></p>
     </li>
     <li>
         <h3>Apellido</h3>
-        <p><a href="Correo: f.ordenesg@alumnos.duoc.cl">Ordenes</a></p>
+        <p><a href="#">{{ user.cli_Apellidos}}</a></p>
     </li>
     <li>
         <h3>Edad</h3>
-        <p><a href="Correo: f.ordenesg@alumnos.duoc.cl">22 años</a></p>
+        <p><a href="#">{{ user.cli_Edad}}</a></p>
     </li>
     <li>
         <h3>Nacionalidad</h3>
-        <p><a href="Correo: f.ordenesg@alumnos.duoc.cl">Chileno</a></p>
+        <p><a href="#">{{ user.cli_Nacionalidad}}</a></p>
     </li>
     <li>
         <h3>Rut</h3>
-        <p><a href="Correo: f.ordenesg@alumnos.duoc.cl">20.984.345-9</a></p>
+        <p><a href="#">{{ user.cli_Rut}}</a></p>
     </li>
 
     <li>
         <h3>Telefono</h3>
-        <p><a href="Correo: f.ordenesg@alumnos.duoc.cl">+56923183726</a></p>
+        <p><a href="#">{{ user.cli_Telefono}}</a></p>
     </li>
 </div>
 </center>
