arreglando mantener_departamento 1

--- a/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
@@ -22,7 +22,6 @@
         <thead>
         <div class="nombrestr">
           <tr>
-            {}
             <th>Codigo</th>
             <th>Nombre</th>
             <th>Departamento</th>
@@ -63,17 +62,20 @@
       <h1>Elegir tarea a realizar</h1>
   </div>
   <div class="inicio-adm-opciones">
-      <div class="inicio-adm-opciones-botones1">
+       <div class="inicio-adm-opciones-botones1">
          <a href="/mantener_cliente">Mantener Clientes</a> 
-      </div>
-      <div class="inicio-adm-opciones-botones2">
+       </div>
+       <div class="inicio-adm-opciones-botones2">
          <a href="/mantener_departamento">Mantener Departamento</a> 
-      </div>
-      <div class="inicio-adm-opciones-botones3">
-          <a href="/pagos_adm">Pagos</a> 
+       </div>
+       <div class="inicio-adm-opciones-botones7">
+        <a href="#">Mantener Reserva</a> 
        </div>
        <div class="inicio-adm-opciones-botones4">
-          <a href="/mantener_servicios">Mantener Servicios Basicos</a> 
+       <a href="/mantener_servicios">Mantener Servicios Basicos</a> 
+       </div>
+       <div class="inicio-adm-opciones-botones3">
+          <a href="/pagos_adm">Pagos</a> 
        </div>
        <div class="inicio-adm-opciones-botones5">
           <a href="/generar_estadistica">Generar Estadistica</a> 
@@ -81,9 +83,6 @@
        <div class="inicio-adm-opciones-botones6">
           <a href="/generar_informe">Generar Informe</a> 
        </div>
-       <div class="inicio-adm-opciones-botones7">
-           <a href="#">Autentificar Cliente</a> 
-        </div>
         <div class="inicio-adm-opciones-botones8">
            <a href="#">Ver mi Perfil</a> 
         </div>
