Empezando Mantener Reserva

--- a/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/inicio.html
@@ -69,7 +69,7 @@
          <a href="/mantener_departamento">Mantener Departamento</a> 
        </div>
        <div class="inicio-adm-opciones-botones7">
-        <a href="#">Mantener Reserva</a> 
+        <a href="/mantener_reserva">Mantener Reserva</a> 
        </div>
        <div class="inicio-adm-opciones-botones4">
        <a href="/mantener_servicios">Mantener Servicios Basicos</a> 
