--- a/Portafolio 2.0/portafolio/aplicacion/templates/listareserva.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/listareserva.html
@@ -22,7 +22,7 @@
 <br>
 <h1>Señor {{ reservitapdf.user.cli_Nombre}} {{ reservitapdf.user.cli_Apellidos}}.</h1>
 
-<h1 align="center">El codigo de su reserva es: "{{ reservitapdf.id}}" </h1>
+<h1 align="center">El codigo de su reserva es: "{{ reservitapdf.Codigo_Reserva}}" </h1>
 
 <p align="center">El inicio de su reserva es "{{ reservitapdf.Fecha_Reserva_Inicio}}" con el termino del 
   "{{ reservitapdf.Fecha_Reserva_Termino}}"
